--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,7 +64,10 @@ debe estar dentro de una etiqueta table para adquirir los atributos de la misma
                     <label for="inputEvent" class="form-label">Evento</label>
                     <select id="inputEvent" class="form-select" required>
                         <option selected>Selección...</option>
-
+                        <option>intercursos</option>
+                        <option>intercolegiados</option>
+                        <option>departamentales</option>
+                        <option>nacionales</option>
                     </select>
                 </div>
                 <div class="col-md-6">
