ya agrega desde pruebas unitarias

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -138,99 +138,7 @@ debe estar dentro de una etiqueta table para adquirir los atributos de la misma
         </div>
     </div>
 </div>
-<!--
-
-<div class="crear" style="padding: 2rem">
-    <h2>Crear Participante</h2>
-
-
-    <form class="row g-3">
-        <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">ID</label>
-            <input type="text" class="form-control" id="inputEmail4">
-        </div>
-        <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="inputPassword4">
-        </div>
-        <div class="col-12">
-            <label for="inputAddress" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="inputAddress">
-        </div>
-        <div class="col-12">
-            <label for="inputAddress2" class="form-label">edad</label>
-            <input type="number" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-        </div>
-        <div class="col-md-4">
-            <label for="inputModo" class="form-label">Modo</label>
-            <select id="inputModo" class="form-select">
-                <option selected>Choose...</option>
-                <option>single</option>
-                <option>team</option>
-            </select>
-        </div>
-        <div class="col-md-4">
-            <label for="inputDiscipline" class="form-label">Disciplina</label>
-            <select id="inputDiscipline" class="form-select">
-                <option selected>Choose...</option>
-                <option>futbol</option>
-                <option>basketball</option>
-                <option>tenis</option>
-                <option>natacion</option>
-                <option>gimnasia</option>
-            </select>
-        </div>
-        <div class="col-md-4">
-            <label for="inputEvent" class="form-label">Evento</label>
-            <select id="inputEvent" class="form-select">
-                <option selected>Choose...</option>
-
-            </select>
-        </div>
-        <div class="col-12">
-            <label for="inputposicion" class="form-label">posicion</label>
-            <input type="number" class="form-control" id="inputposicion">
-        </div>
-
-        <div class="col-12">
-            <button id="Crear" type="submit" class="btn btn-primary">Aceptar</button>
-        </div>
-    </form>
-
-</div>
-
-
-Listar Participantes
-<div class="listar" style="padding: 2rem">
-    <h2 style="padding-bottom: 0.5rem">Listar Participante</h2>
-    <label for="participants">Estudiantes</label>
-    <select id="participants" class="form-control">
-        <option selected>Seleccione el estudiante..</option>
-    </select>
-    <div class="col-auto" style="padding-top: 1rem">
-        <button type="submit" class="btn btn-primary" id="deleteButton">Eliminar</button>
-    </div>
-
-    <table class="table" id="listTable">
-        <thead>
-        <tr>
-            <th id="nombre" scope="col">Nombre</th>
-            <th id="apellido" scope="col">Apellido</th>
-            <th id="codigo" scope="col">Codigo</th>
-            <th id="disciplina" scope="col">Disciplina</th>
-            <th id="grupos" scope="col">modo</th>
-            <th id="competencia" scope="col">competencia</th>
-            <th id="puesto" scope="col">Puesto obtenido</th>
-        </tr>
-        </thead>
-        <tbody id="body">
-
-        </tbody>
-    </table>
-</div>
--->
-
-<script src="script.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
