agregado boton en index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,48 +88,54 @@ debe estar dentro de una etiqueta table para adquirir los atributos de la misma
         <hr><h2 class="display-4">Listar Participantes</h2>
     </div>
     <!--Listar Participantes-->
-    <div class="container text-center">
-        <div class="row">
-            <form id="form2">
-                <label for="participants" class="text-start">Estudiantes</label>
-                <div class="col-md-8 text-center">
+    <div class="container">
+        <form id="form2">
+            <label for="participants" class="text-start">Estudiantes</label>
+            <div class="row">
+                <div class="col-md-8">
                     <select id="participants" class="form-control">
                         <option selected>Seleccione el estudiante..</option>
                     </select>
-
                 </div>
-                <div class="col-md-4" style="padding-top: 1rem;padding-bottom: 1rem">
-                    <button type="submit" class="btn btn-danger  w-50 text-center" id="deleteButton">Eliminar</button>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-primary text-center w-100" id="updateButton">Actualizar</button>
                 </div>
-
-                <table class="table table-striped table-hover text-center" id="listTable">
-                    <thead>
-                    <tr>
-                        <th id="nombre" scope="col">Nombre</th>
-                        <th id="apellido" scope="col">Apellido</th>
-                        <th id="codigo" scope="col">Codigo</th>
-                        <th id="disciplina" scope="col">Disciplina</th>
-                        <th id="grupos" scope="col">modo</th>
-                        <th id="competencia" scope="col">competencia</th>
-                        <th id="puesto" scope="col">Puesto obtenido</th>
-                    </tr>
-                    </thead>
-                    <tbody id="body">
-
-                    </tbody>
-                </table>
-                <tr></tr>
-            </form>
-        </div>
-
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-danger text-center w-100" id="deleteButton">Eliminar</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <table class="table table-striped table-hover text-center" id="listTable">
+                        <thead>
+                        <tr>
+                            <th id="nombre" scope="col">Nombre</th>
+                            <th id="apellido" scope="col">Apellido</th>
+                            <th id="codigo" scope="col">Codigo</th>
+                            <th id="disciplina" scope="col">Disciplina</th>
+                            <th id="grupos" scope="col">modo</th>
+                            <th id="competencia" scope="col">competencia</th>
+                            <th id="puesto" scope="col">Puesto obtenido</th>
+                        </tr>
+                        </thead>
+                        <tbody id="body">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
-</div>
+    <div class="container-fluid">
+        <div class="container">
+
+        </div>
+    </div>
 <div class="container-fluid alert-secondary text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-6"><br>
-                <p>Hecho por :<br> - Robinson Eduardo Aguilar Puentes. y Laura Nicol Grandos.</p>
+                <p>Hecho con &hearts; por :<br> - Robinson Eduardo Aguilar Puentes y Laura Nicol Grandos.</p>
             </div>
             <div class="col-md-6"><br>
                 <p>Presentado a : <br> - Jairo Riaño.</p>
