Ya esta listo XD

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -112,6 +112,7 @@ debe estar dentro de una etiqueta table para adquirir los atributos de la misma
                             <th id="codigo" scope="col">Codigo</th>
                             <th id="disciplina" scope="col">Disciplina</th>
                             <th id="grupos" scope="col">modo</th>
+                            <th id="edad" scope="col">edad</th>
                             <th id="competencia" scope="col">competencia</th>
                             <th id="puesto" scope="col">Puesto obtenido</th>
                         </tr>
